bug: Fix wrong color

--- a/src/css/infographic.css
+++ b/src/css/infographic.css
@@ -219,7 +219,7 @@ rect.active {
 }
 
 .JJ-pos-point {
-  fill: #c2f6ff;
+  fill: #90a9dc;
 }
 
 .JJR-pos-point {
